[package]
name = "rusted-databot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.4.0", features = ["rt-multi-thread", "process"] }
dotenv = "0.15.0"
poise = "0.5.2"
rand = "0.8.4"
plotly = { version = "0.5", features = ["kaleido"]}
serde = "1.0"
serde_json = "1.0"
chrono = "0.4"
lazy_static = "1.4"
plotters = "0.3"
tempfile = "3.2"

#, features = ["orca"]